{
  "version": 4,
  "terraform_version": "1.13.5",
  "serial": 393,
  "lineage": "f67dd337-4c2f-667b-7dbe-d0e08e5498ac",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-12-07T05:54:47.975-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": true,
            "enable_logging": null,
            "id": "projects/iot-k8s-petor/global/firewalls/makeauto-allow-ssh",
            "log_config": [],
            "name": "makeauto-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/iot-k8s-petor/global/networks/makeauto-vpc",
            "params": [],
            "priority": 1000,
            "project": "iot-k8s-petor",
            "self_link": "https://www.googleapis.com/compute/v1/projects/iot-k8s-petor/global/firewalls/makeauto-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "egress_allow",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2025-12-07T05:54:47.729-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/iot-k8s-petor/global/firewalls/makeauto-egress-allow",
            "log_config": [],
            "name": "makeauto-egress-allow",
            "network": "https://www.googleapis.com/compute/v1/projects/iot-k8s-petor/global/networks/makeauto-vpc",
            "params": [],
            "priority": 1000,
            "project": "iot-k8s-petor",
            "self_link": "https://www.googleapis.com/compute/v1/projects/iot-k8s-petor/global/firewalls/makeauto-egress-allow",
            "source_ranges": null,
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "private_ip_range",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.90.0.0",
            "address_type": "INTERNAL",
            "creation_timestamp": "2025-12-07T05:54:47.831-08:00",
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "id": "projects/iot-k8s-petor/global/addresses/makeauto-sql-private-ip-range",
            "label_fingerprint": "vezUS-42LLM=",
            "name": "makeauto-sql-private-ip-range",
            "network": "https://www.googleapis.com/compute/v1/projects/iot-k8s-petor/global/networks/makeauto-vpc",
            "prefix_length": 16,
            "project": "iot-k8s-petor",
            "purpose": "VPC_PEERING",
            "self_link": "https://www.googleapis.com/compute/v1/projects/iot-k8s-petor/global/addresses/makeauto-sql-private-ip-range",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/iot-k8s-petor/global/networks/makeauto-vpc",
            "mtu": 0,
            "name": "makeauto-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "7825441093680904691",
            "numeric_id": "7825441093680904691",
            "project": "iot-k8s-petor",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/iot-k8s-petor/global/networks/makeauto-vpc"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-12-07T05:54:48.036-08:00",
            "gateway_address": "10.10.0.1",
            "id": "projects/iot-k8s-petor/regions/us-central1/subnetworks/makeauto-subnet",
            "ip_cidr_range": "10.10.0.0/24",
            "name": "makeauto-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/iot-k8s-petor/global/networks/makeauto-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "iot-k8s-petor",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.20.0.0/16",
                "range_name": "makeauto-pods"
              },
              {
                "ip_cidr_range": "10.30.0.0/20",
                "range_name": "makeauto-services"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/iot-k8s-petor/regions/us-central1/subnetworks/makeauto-subnet",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 6206901454370257351
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.main"
          ]
        }
      ]
    }
  ]
}